--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,21 +7,22 @@
 }
 
 .footer {
-    padding: 30px 40px;
+   
     width: 100%;
     background: #ecf2f7;
 
 }
 
 .footer .container {
-    justify-content: space-between;
+    
     display: flex;
   flex-direction: row;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 
 .footer .container .about {
-    max-width: 30%;
+    max-width: 40%;
 
 }
 
@@ -55,6 +56,7 @@
 .footer .container .account {
     
     margin-top: 30px;
+    margin-left: 40px;
 }
 
 .footer .container .account h3 {
